(fix) Invisible code blocks when writing a post

--- a/components/write/Editor/styles.scss
+++ b/components/write/Editor/styles.scss
@@ -1,4 +1,8 @@
+@import '~@/styles/common/post';
+
 .container {
+  @extend %postBody;
+
   & :global(.ProseMirror) {
     padding: 0.5rem;
   }
